--- a/main/templates/zakaz6.html
+++ b/main/templates/zakaz6.html
@@ -30,6 +30,7 @@
           <div class="col-2-3">
                 <div class="text2"> Укажите нужные параметры:  </div><br><br>
           </div>
+            <form>{{ form }}</form>
         </div>
 <footer>
     <div class="container">
