--- a/main/templates/zakaz6.html
+++ b/main/templates/zakaz6.html
@@ -30,7 +30,12 @@
           <div class="col-2-3">
                 <div class="text2"> Укажите нужные параметры:  </div><br><br>
           </div>
-            <form>{{ form }}</form>
+            <form method="POST">
+                {% csrf_token %}
+                {{ formpillow }}
+                <input type="submit" value="Узнать цену">
+            </form>
+
         </div>
 <footer>
     <div class="container">
