--- a/main/templates/zakaz6.html
+++ b/main/templates/zakaz6.html
@@ -7,6 +7,7 @@
     <title>Артпечать</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat">
+    <script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 </head>
 <body>
   <header>
@@ -30,12 +31,25 @@
           <div class="col-2-3">
                 <div class="text2"> Укажите нужные параметры:  </div><br><br>
           </div>
-            <form method="POST">
-                {% csrf_token %}
-                {{ formpillow }}
-                <input type="submit" value="Узнать цену">
-            </form>
-
+            <div class="cost-block">
+            <select id="id_Цвет">
+                <option value="1">Белый</option>
+                <option value="2">Бежевый</option>
+                <option value="3">Имитация льна</option>
+                <option value="4">Шампань</option>
+                <option value="5">Фисташковый</option>
+            </select>
+                <select id="id_Размер">
+                    <option value="1">35x35</option>
+                    <option value="2">40x40</option>
+                </select>
+                <select id="id_Формат">
+                    <option value="1">Односторонняя печать</option>
+                    <option value="2">Двусторонняя печать</option>
+                </select>
+            <input type="submit" value="Узнать цену" onClick="costValue()">
+            <p id="costValueText"></p>
+            </div>
         </div>
 <footer>
     <div class="container">
