добавлены картинки на шопперах и метод замены картинки по клику( переход пока не работает)

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -137,5 +137,14 @@ button{
 }
 
 .cost-block{
-    display: inline-block;
+    text-align: center;
+    font-family: Calibri;
+    font-style: italic;
+    font-size: 24px;
+}
+
+.select{
+    font-family: Calibri;
+    font-style: italic;
+    font-size: 24px;
 }
