--- a/main/templates/zakaz5.html
+++ b/main/templates/zakaz5.html
@@ -7,6 +7,7 @@
     <title>Артпечать</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat">
+    <script type="text/javascript" src="{% static 'js/shoper.js' %}"></script>
 </head>
 <body>
   <header>
@@ -24,13 +25,39 @@
 <div class="container">
         <div class="row">
           <div class="col-1-3">
-                <img width="500" height="480" src="{% static 'image/spopper.png' %}"/>
+                <img width="500" height="480" src="{% static 'image/spopper.png' %}" id =  'imgValue'/>
           </div>
 
           <div class="col-2-3">
                 <div class="text2"> Укажите нужные параметры:  </div><br><br>
+
+                  <div class="cost-block">
+                    <select id="id_Цвет">
+                        <option value="1">Белый</option>
+                        <option value="2">Бежевый</option>
+                        <option value="3">Молочный</option>
+                    </select>
+                    <select id="id_Формат">
+                        <option value="1">Односторонняя печать</option>
+                        <option value="2">Двусторонняя печать</option>
+                    </select>
+                    <input type="submit" value="Узнать цену" onClick="costValue()">
+                    <p id="costValueText"></p>
+                  </div>
+                  <div class="wrapper">
+
+                      <a href="#" onclick = "zamena(); return false;" ><img src="{% static 'min/shop1.jpg' %}" id="img1"></a>
+                      <a href="#img2"><img src="{% static 'min/shop2.jpg' %}" id="img2" /></a>
+                      <a href="#img3"><img src="{% static 'min/shop3.jpg' %}" id="img3"/></a>
+                      <a href="#img4"><img src="{% static 'min/shop4.jpg' %}" id="img4"/></a>
+                      <a href="#img5"><img src="{% static 'min/shop5.jpg' %}" id="img5"/></a>
+                      <a href="#img5"><img src="{% static 'min/shop6.jpg' %}" id="img6"/></a>
+
+
+                  </div>
           </div>
-        </div>
+          </div>
+        </div>>
 <footer>
     <div class="container">
        <div class="col-1-3"><p>Settings Group</p></div>
