--- a/main/templates/zakaz5.html
+++ b/main/templates/zakaz5.html
@@ -25,7 +25,7 @@
 <div class="container">
         <div class="row">
           <div class="col-1-3">
-                <img width="500" height="480" src="{% static 'image/spopper.png' %}" id =  'imgValue'/>
+                <img width="500" height="480" src="{% static 'image/spopper.png' %}" id ="imgValue"/>
           </div>
 
           <div class="col-2-3">
@@ -46,7 +46,7 @@
                   </div>
                   <div class="wrapper">
 
-                      <a href="#" onclick = "zamena(); return false;" ><img src="{% static 'min/shop1.jpg' %}" id="img1"></a>
+                      <a href="#" onClick = "zamena(this)" id="img1"><img src="{% static 'min/shop1.jpg' %}"></a>
                       <a href="#img2"><img src="{% static 'min/shop2.jpg' %}" id="img2" /></a>
                       <a href="#img3"><img src="{% static 'min/shop3.jpg' %}" id="img3"/></a>
                       <a href="#img4"><img src="{% static 'min/shop4.jpg' %}" id="img4"/></a>
