задействована ункция замена картинок

--- a/main/templates/zakaz5.html
+++ b/main/templates/zakaz5.html
@@ -12,7 +12,7 @@
 <body>
   <header>
         <div class="container">
-          <a href="/" class="logo"><img width="90" height="90" src="{% static 'image/logo.gif' %}"</a>
+          <a href="/" class="logo"><img width="90" height="90" src="{% static 'image/logo.gif' %}"></a>
           <nav>
             <ul>
               <li><a href="/">Главная</a></li>
@@ -22,10 +22,10 @@
           </nav>
         </div>
   </header>
-<div class="container">
+    <div class="container">
         <div class="row">
           <div class="col-1-3">
-                <img width="500" height="480" src="{% static 'image/spopper.png' %}" id ="imgValue"/>
+                <img width="500" height="500" src="{% static 'image/spopper.png' %}" id ="imgValue"/>
           </div>
 
           <div class="col-2-3">
@@ -41,17 +41,17 @@
                         <option value="1">Односторонняя печать</option>
                         <option value="2">Двусторонняя печать</option>
                     </select>
-                    <input type="submit" value="Узнать цену" onClick="costValue()">
-                    <p id="costValueText"></p>
+                    <input type="submit" value="Уточнить цену" onClick="costValue()">
+                    <p id="costValueText">Цена 11 руб. </p>
                   </div>
                   <div class="wrapper">
 
                       <a href="#" onClick = "zamena(this)" id="img1"><img src="{% static 'min/shop1.jpg' %}"></a>
-                      <a href="#img2"><img src="{% static 'min/shop2.jpg' %}" id="img2" /></a>
-                      <a href="#img3"><img src="{% static 'min/shop3.jpg' %}" id="img3"/></a>
-                      <a href="#img4"><img src="{% static 'min/shop4.jpg' %}" id="img4"/></a>
-                      <a href="#img5"><img src="{% static 'min/shop5.jpg' %}" id="img5"/></a>
-                      <a href="#img5"><img src="{% static 'min/shop6.jpg' %}" id="img6"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img2"><img src="{% static 'min/shop2.jpg' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img3"><img src="{% static 'min/shop3.jpg' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img4"><img src="{% static 'min/shop4.jpg' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img5"><img src="{% static 'min/shop5.jpg' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img6"><img src="{% static 'min/shop6.jpg' %}"/></a>
 
 
                   </div>
