--- a/main/templates/zakaz11.html
+++ b/main/templates/zakaz11.html
@@ -12,7 +12,7 @@
 <body>
   <header>
         <div class="container">
-          <a href="/" class="logo"><img width="90" height="90" src="{% static 'image/logo.gif' %}"</a>
+          <a href="/" class="logo"><img width="90" height="90" src="{% static 'image/logo.gif' %}"/a>
           <nav>
             <ul>
               <li><a href="/">Главная</a></li>
@@ -25,7 +25,7 @@
 <div class="container">
         <div class="row">
           <div class="col-1-3">
-                <img width="500" height="480" src="{% static 'image/futb.png' %}" id ="imgValue">
+                <img width="500" height="480" src="{% static 'image/futb.png' %}"/>
           </div>
 
           <div class="col-2-3">
@@ -50,12 +50,12 @@
                   </div>
                   <div class="wrapper">
 
-                      <a href="#" onClick = "zamena(this)" id="img1"><img src="{% static 'min/fut5.jpg' %}"></a>
-                      <a href="#" onClick = "zamena(this)" id="img2"><img src="{% static 'min/fut3.jpg' %}"/></a>
-                      <a href="#" onClick = "zamena(this)" id="img3"><img src="{% static 'min/fut1.jpg' %}"/></a>
-                      <a href="#" onClick = "zamena(this)" id="img4"><img src="{% static 'min/fut4.jpg' %}"/></a>
-                      <a href="#" onClick = "zamena(this)" id="img5"><img src="{% static 'min/fut2.jpg' %}"/></a>
-                      <a href="/nopasaran" ><img src="{% static 'min/No_pasaran.png' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img1"><img src="{% static 'min/fut-logo.jpg' %}"></a>
+                      <a href="#" onClick = "zamena(this)" id="img2"><img src="{% static 'min/nivea.png' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img3"><img src="{% static 'min/Skoda.png' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img4"><img src="{% static 'min/zubr.png' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img5"><img src="{% static 'min/pogona.png' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img6"><img src="{% static 'min/No_pasaran.png' %}"/></a>
 
 
                   </div>
