--- a/main/templates/zakaz6.html
+++ b/main/templates/zakaz6.html
@@ -48,7 +48,7 @@
                         <option value="2">Двусторонняя печать</option>
                     </select>
                     <input type="submit" value="Уточнить цену" onClick="costValue()">
-                    <p id="costValueText"></p>
+                    <p id="costValueText">Цена 12 руб.</p>
                </div>
           </div>
         </div>
