Переход на страницу перехода не для всех по условию

--- a/main/templates/kkbchb.html
+++ b/main/templates/kkbchb.html
@@ -29,7 +29,8 @@
           </div>
 
           <div class="col-2-3">
-                <div class="text2"> Укажите нужные параметры:  </div><br><br>
+                <div class="text2"> То ўзаемна!  </div>
+                <div class="text3"> На гэтай старонке ты знойдзеш прынты для сапраўдных беларусаў   </div><br><br>
                   <div class="cost-block">
                         <select id="id_Пол">
                             <option value="1">Мужская</option>
