--- a/main/templates/kkbchb.html
+++ b/main/templates/kkbchb.html
@@ -7,7 +7,7 @@
     <title>Артпечать</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat">
-    <script type="text/javascript" src="{% static 'js/fut.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/kkbchb.js' %}"></script>
 </head>
 <body>
   <header>
@@ -25,7 +25,7 @@
 <div class="container">
         <div class="row">
           <div class="col-1-3">
-                <img width="500" height="480" src="{% static 'image/futb.png' %}"/>
+                <img width="500" height="480" src="{% static 'image/futb.png' %}"id ="imgValue"/>
           </div>
 
           <div class="col-2-3">
