--- a/main/templates/zakaz4.html
+++ b/main/templates/zakaz4.html
@@ -7,6 +7,7 @@
     <title>Артпечать</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat">
+    <script type="text/javascript" src="{% static 'js/apron.js' %}"></script>
 </head>
 <body>
   <header>
@@ -24,13 +25,37 @@
 <div class="container">
         <div class="row">
           <div class="col-1-3">
-                <img width="500" height="480" src="{% static 'image/apron.png' %}"/>
+                <img width="500" height="480" src="{% static 'image/apron.png' %}" id ="imgValue"/>
           </div>
 
           <div class="col-2-3">
                 <div class="text2"> Укажите нужные параметры:  </div><br><br>
+
+                  <div class="cost-block">
+                    <select id="id_Кант">
+                        <option value="1">Без канта</option>
+                        <option value="2">С кантом</option>
+                    </select>
+                    <select id="id_Формат">
+                        <option value="1">Формат А5</option>
+                        <option value="2">Формат А4</option>
+                        <option value="3">Формат А3</option>
+                    </select>
+                    <input type="submit" value="Уточнить цену" onClick="costValue()">
+                    <p id="costValueText"> Цена 7 руб. </p>
+                  </div>
+                  <div class="wrapper">
+
+                      <a href="#" onClick = "zamena(this)" id="img1"><img src="{% static 'min/shop1.jpg' %}"></a>
+                      <a href="#" onClick = "zamena(this)" id="img2"><img src="{% static 'min/shop2.jpg' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img3"><img src="{% static 'min/shop3.jpg' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img4"><img src="{% static 'min/shop4.jpg' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img5"><img src="{% static 'min/shop5.jpg' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img6"><img src="{% static 'min/shop6.jpg' %}"/></a>
+                  </div>
+                </div>
           </div>
-        </div>
+        </div>>
 <footer>
     <div class="container">
        <div class="col-1-3"><p>Settings Group</p></div>
