--- a/main/templates/zakaz.html
+++ b/main/templates/zakaz.html
@@ -15,7 +15,7 @@
           <nav>
             <ul>
               <li><a href="/">Главная</a></li>
-              <li><a href="">Заказать</a></li>
+              <li><a href="/order">Заказать</a></li>
               <li><a href="">Контакты</a></li>
             </ul>
           </nav>
@@ -36,11 +36,6 @@
                     <button onclick="window.location.href = '/zakaz/zakaz3';"><img alt="" width="150" height="150" src="{% static 'image/tolst.png' %}"></button>
                     <button onclick="window.location.href = '/zakaz/zakaz4';"><img alt="" width="150" height="150" src="{% static 'image/apron.png' %}"></button>
                     <button onclick="window.location.href = '/zakaz/zakaz5';"><img alt="" width="150" height="150" src="{% static 'image/spopper.png' %}"></button>
-                    <button onclick="window.location.href = '/zakaz/zakaz6';"><img alt="" width="150" height="150" src="{% static 'image/pillow.png' %}"></button>
-                    <button onclick="window.location.href = '/zakaz/zakaz7';"><img alt="" width="150" height="150" src="{% static 'image/puzzles.png' %}"></button>
-                    <button onclick="window.location.href = '/zakaz/zakaz8';"><img alt="" width="150" height="150" src="{% static 'image/image21.png' %}"></button>
-                    <button onclick="window.location.href = '/zakaz/zakaz9';"><img alt="" width="150" height="150" src="{% static 'image/towwel.png' %}"></button>
-                    <button onclick="window.location.href = '/zakaz/zakaz10';"><img alt="" width="150" height="150" src="{% static 'image/magnit.png' %}"></button>
 
                 </div>
               </div>
