--- a/main/templates/zakaz1.html
+++ b/main/templates/zakaz1.html
@@ -12,7 +12,7 @@
 <body>
   <header>
         <div class="container">
-          <a href="/" class="logo"><img width="90" height="90" src="{% static 'image/logo.gif' %}"</a>
+          <a href="/" class="logo"><img width="90" height="90" src="{% static 'image/logo.gif' %}" /a>
           <nav>
             <ul>
               <li><a href="/">Главная</a></li>
@@ -56,7 +56,8 @@
                       <a href="#" onClick = "zamena(this)" id="img4"><img src="{% static 'min/fut4.jpg' %}"/></a>
                       <a href="#" onClick = "zamena(this)" id="img5"><img src="{% static 'min/fut2.jpg' %}"/></a>
                       <a href="/nopasaran" ><img src="{% static 'min/No_pasaran.png' %}"/></a>
-
+                      <br> <br>
+                      <a href="/order" class="zakaz" >Заказать</a>
 
                   </div>
           </div>
