--- a/main/templates/zakaz3.html
+++ b/main/templates/zakaz3.html
@@ -7,11 +7,12 @@
     <title>Артпечать</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat">
+    <script type="text/javascript" src="{% static 'js/tolst.js' %}"></script>
 </head>
 <body>
   <header>
         <div class="container">
-          <a href="/" class="logo"><img width="90" height="90" src="{% static 'image/logo.gif' %}"</a>
+          <a href="/" class="logo"><img width="90" height="90" src="{% static 'image/logo.gif' %}"a>
           <nav>
             <ul>
               <li><a href="/">Главная</a></li>
@@ -21,14 +22,42 @@
           </nav>
         </div>
   </header>
-<div class="container">
+ <div class="container">
         <div class="row">
           <div class="col-1-3">
-                <img width="500" height="480" src="{% static 'image/tolst.png' %}"/>
+                <img width="500" height="480" src="{% static 'image/tolst.png' %}" id ="imgValue"/>
           </div>
 
           <div class="col-2-3">
                 <div class="text2"> Укажите нужные параметры:  </div><br><br>
+                      <div class="cost-block">
+                        <select id="id_Пол">
+                            <option value="1">Мужская</option>
+                            <option value="2">Женская</option>
+                            <option value="3">Детская</option>
+                        </select>
+                        <select id="id_Размер принта">
+                            <option value="1">Формат А5</option>
+                            <option value="2">Формат А4</option>
+                            <option value="3">Формат А3</option>
+                        </select>
+                        <select id="id_Формат">
+                            <option value="1">Односторонняя печать</option>
+                            <option value="2">Двусторонняя печать</option>
+                        </select>
+                        <input type="submit" value="Уточнить цену" onClick="costValue()">
+                        <p id="costValueText">Цена 25 руб. </p>
+                      </div>
+                  <div class="wrapper">
+
+                      <a href="#" onClick = "zamena(this)" id="img1"><img src="{% static 'min/got7.jpg' %}"></a>
+                      <a href="#" onClick = "zamena(this)" id="img2"><img src="{% static 'min/got8.jpg' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img3"><img src="{% static 'min/got10.jpg' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img4"><img src="{% static 'min/got9.jpg' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img5"><img src="{% static 'min/got11.jpg' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img6"><img src="{% static 'min/got12.jpg' %}"/></a>
+                  </div>
+                </div>
           </div>
         </div>
 <footer>
