--- a/main/templates/zakaz4.html
+++ b/main/templates/zakaz4.html
@@ -7,12 +7,12 @@
     <title>Артпечать</title>
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Caveat">
-    <script type="text/javascript" src="{% static 'js/apron.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/apr.js' %}"></script>
 </head>
 <body>
   <header>
         <div class="container">
-          <a href="/" class="logo"><img width="90" height="90" src="{% static 'image/logo.gif' %}"</a>
+          <a href="/" class="logo"><img width="90" height="90" src="{% static 'image/logo.gif' %}"></a>
           <nav>
             <ul>
               <li><a href="/">Главная</a></li>
@@ -22,7 +22,7 @@
           </nav>
         </div>
   </header>
-<div class="container">
+  <div class="container">
         <div class="row">
           <div class="col-1-3">
                 <img width="500" height="480" src="{% static 'image/apron.png' %}" id ="imgValue"/>
@@ -46,17 +46,17 @@
                   </div>
                   <div class="wrapper">
 
-                      <a href="#" onClick = "zamena(this)" id="img1"><img src="{% static 'min/shop1.jpg' %}"></a>
-                      <a href="#" onClick = "zamena(this)" id="img2"><img src="{% static 'min/shop2.jpg' %}"/></a>
-                      <a href="#" onClick = "zamena(this)" id="img3"><img src="{% static 'min/shop3.jpg' %}"/></a>
-                      <a href="#" onClick = "zamena(this)" id="img4"><img src="{% static 'min/shop4.jpg' %}"/></a>
-                      <a href="#" onClick = "zamena(this)" id="img5"><img src="{% static 'min/shop5.jpg' %}"/></a>
-                      <a href="#" onClick = "zamena(this)" id="img6"><img src="{% static 'min/shop6.jpg' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img1"><img src="{% static 'min/apr1.jpg' %}"></a>
+                      <a href="#" onClick = "zamena(this)" id="img2"><img src="{% static 'min/apr2.jpg' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img3"><img src="{% static 'min/apr3.jpg' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img4"><img src="{% static 'min/apr4.jpg' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img5"><img src="{% static 'min/apr5.jpg' %}"/></a>
+                      <a href="#" onClick = "zamena(this)" id="img6"><img src="{% static 'min/apr6.jpg' %}"/></a>
                   </div>
                 </div>
           </div>
         </div>>
-<footer>
+  <footer>
     <div class="container">
        <div class="col-1-3"><p>Settings Group</p></div>
        <div class="col-1-3"><p>info@settings.by</p></div>
