--- a/static/css/main.css
+++ b/static/css/main.css
@@ -126,7 +126,7 @@ footer {
   color: White;
 }
 
-button{
+.button{
     margin-left:30px;
     margin-bottom:30px;
     color: #fff;
@@ -148,3 +148,16 @@ button{
     font-style: italic;
     font-size: 24px;
 }
+
+.zakaz{
+    position: relative;
+    left: 400px;
+
+    display: inline-block;
+    background: MediumVioletRed;
+    color: #fff;
+    padding: 0.5rem 2rem;
+    text-decoration: none;
+    border-radius: 3px; /
+}
+
